--- a/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
+++ b/ExorLive.Client.WebWrapper/ExorLive.Client.WebWrapper.csproj
@@ -220,8 +220,8 @@
 	<Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 	<PropertyGroup>
 		<PostBuildEvent>
-			call "$(SolutionDir)lib\signtool.exe" sign /a /d "$(SolutionName)" /tr http://timestamp.digicert.com /td SHA256 "$(TargetPath)"
-			call "$(SolutionDir)lib\signtool.exe" sign /a /d "$(SolutionName)" /tr http://timestamp.digicert.com /td SHA256 "$(ProjectDir)obj\$(ConfigurationName)\$(TargetFileName)"
+			call "$(SolutionDir)lib\signtool.exe" sign /a /d "$(SolutionName)" /n "ExorLive AS" /tr http://timestamp.digicert.com /td SHA256 "$(TargetPath)"
+			call "$(SolutionDir)lib\signtool.exe" sign /a /d "$(SolutionName)" /n "ExorLive AS" /tr http://timestamp.digicert.com /td SHA256 "$(ProjectDir)obj\$(ConfigurationName)\$(TargetFileName)"
 		</PostBuildEvent>
 	</PropertyGroup>
 	<!-- To modify your build process, add your task inside one of the targets below and uncomment it.
