--- a/WebWrapper.WebViewBrowser/WebWrapper.WebViewBrowser.csproj
+++ b/WebWrapper.WebViewBrowser/WebWrapper.WebViewBrowser.csproj
@@ -61,6 +61,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BrowserObject.cs" />
+    <Compile Include="TlsWebClient.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="WebViewBrowser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
