--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -69,7 +69,7 @@
 				<value />
 			</setting>
 			<setting name="AppUrl" serializeAs="String">
-				<value>https://exorlive.com/app/</value>
+				<value>http://localhost:50000/app/</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
