Update changelog, year copyright, and default values.

--- a/ExorLive.Client.WebWrapper/App.Procapita.config
+++ b/ExorLive.Client.WebWrapper/App.Procapita.config
@@ -8,15 +8,21 @@
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">procapita</value>
 			</setting>
+			<setting name="BrowserEngine" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">EoWebBrowser</value>
+			</setting>
+			<setting name="MinimizeOnExit" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
-			<setting name="AppUrl" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
-			</setting>
 			<setting name="Debug" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
+			</setting>
+			<setting name="AppUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
 			</setting>
 			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">ExorLive.Desktop.Procapita.Component, ExorLive.Desktop</value>
@@ -25,6 +31,12 @@
 				<value xdt:Transform="Replace">True</value>
 			</setting>
 			<setting name="SignonWithWindowsUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
+			<setting name="AdfsUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace"></value>
+			</setting>
+			<setting name="Log" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
 			</setting>
 		</ExorLive.Properties.Settings>
