--- a/ExorLive.Client.WebWrapper/App.Uppsala.config
+++ b/ExorLive.Client.WebWrapper/App.Uppsala.config
@@ -8,6 +8,12 @@
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">uppsala</value>
 			</setting>
+			<setting name="BrowserEngine" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">EoWebBrowser</value>
+			</setting>
+			<setting name="MinimizeOnExit" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
@@ -18,7 +24,19 @@
 			<setting name="AppUrl" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">https://sso.exorlive.com/auth/wsfed/uppsala/</value>
 			</setting>
+			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</value>
+			</setting>
 			<setting name="RememberLoggedInUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">False</value>
+			</setting>
+			<setting name="SignonWithWindowsUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
+			<setting name="AdfsUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace"></value>
+			</setting>
+			<setting name="Log" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
 			</setting>
 		</ExorLive.Properties.Settings>
