--- a/ExorLive.Client.WebWrapper/App.Release.config
+++ b/ExorLive.Client.WebWrapper/App.Release.config
@@ -5,14 +5,38 @@
 			<setting name="CheckForUpdates" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">True</value>
 			</setting>
+			<setting name="UpdatePath" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace"></value>
+			</setting>
+			<setting name="BrowserEngine" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">EoWebBrowser</value>
+			</setting>
+			<setting name="MinimizeOnExit" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
+			<setting name="Debug" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">False</value>
+			</setting>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
 			</setting>
-			<setting name="Debug" xdt:Locator="Match(name)">
+			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">ExorLive.Desktop.Arguments.Component, ExorLive.Desktop</value>
+			</setting>
+			<setting name="RememberLoggedInUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
+			<setting name="SignonWithWindowsUser" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
+			</setting>
+			<setting name="AdfsUrl" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace"></value>
+			</setting>
+			<setting name="Log" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
 			</setting>
 		</ExorLive.Properties.Settings>
