--- a/ExorLive.Client.WebWrapper/App.VGR.config
+++ b/ExorLive.Client.WebWrapper/App.VGR.config
@@ -9,12 +9,18 @@
 				<value xdt:Transform="Replace">vgr</value>
 			</setting>
 			<setting name="BrowserEngine" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">WebViewBrowser</value>
+				<value xdt:Transform="Replace">EoWebBrowser</value>
+			</setting>
+			<setting name="MinimizeOnExit" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">True</value>
 			</setting>
 		</ExorLive.Properties.Settings>
 	</userSettings>
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
+			<setting name="Debug" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">False</value>
+			</setting>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
 			</setting>
@@ -30,7 +36,7 @@
 			<setting name="AdfsUrl" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">https://adfs.exorlive.com/?name=vgr</value>
 			</setting>
-			<setting name="Debug" xdt:Locator="Match(name)">
+			<setting name="Log" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
 			</setting>
 		</ExorLive.Properties.Settings>
