--- a/ExorLive.Client.WebWrapper/App.Debug.config
+++ b/ExorLive.Client.WebWrapper/App.Debug.config
@@ -3,7 +3,7 @@
 	<applicationSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">http://localhost:50000/app/</value>
+				<value xdt:Transform="Replace">https://test.exorlive.com/app/</value>
 			</setting>
 			<setting name="Debug" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">True</value>
