Setting a default culture in config.

--- a/ExorLive.Client.WebWrapper/App.config
+++ b/ExorLive.Client.WebWrapper/App.config
@@ -35,7 +35,7 @@
     <value>False</value>
    </setting>
    <setting name="UpdatePath" serializeAs="String">
-    <value/>
+    <value />
    </setting>
    <setting name="CheckForUpdates" serializeAs="String">
     <value>True</value>
@@ -66,10 +66,13 @@
     <value>True</value>
    </setting>
    <setting name="AdfsUrl" serializeAs="String">
-    <value/>
+    <value />
    </setting>
    <setting name="AppUrl" serializeAs="String">
-    <value>https://exorlive.com/app/</value>
+    <value>https://auth.exorlive.com/signin/</value>
+   </setting>
+   <setting name="Culture" serializeAs="String">
+    <value />
    </setting>
   </ExorLive.Properties.Settings>
 	</applicationSettings>
