--- a/ExorLive.Client.WebWrapper/App.Procapita.config
+++ b/ExorLive.Client.WebWrapper/App.Procapita.config
@@ -22,7 +22,7 @@
 				<value xdt:Transform="Replace">False</value>
 			</setting>
 			<setting name="AppUrl" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">https://exorlive.com/app/</value>
+				<value xdt:Transform="Replace">https://auth.exorlive.com/signin/</value>
 			</setting>
 			<setting name="ProtocolProvider" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">ExorLive.Desktop.Procapita.Component, ExorLive.Desktop</value>
