--- a/ExorLive.Client.WebWrapper/App.VGR.config
+++ b/ExorLive.Client.WebWrapper/App.VGR.config
@@ -39,6 +39,9 @@
 			<setting name="Log" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">False</value>
 			</setting>
+			<setting name="Culture" xdt:Locator="Match(name)">
+				<value xdt:Transform="Replace">sv-SE</value>
+			</setting>
 		</ExorLive.Properties.Settings>
 	</applicationSettings>
 </configuration>
