Disable autoupdate for goteborg.

--- a/ExorLive.Client.WebWrapper/App.Goteborg.config
+++ b/ExorLive.Client.WebWrapper/App.Goteborg.config
@@ -3,7 +3,7 @@
 	<userSettings>
 		<ExorLive.Properties.Settings>
 			<setting name="CheckForUpdates" xdt:Locator="Match(name)">
-				<value xdt:Transform="Replace">True</value>
+				<value xdt:Transform="Replace">False</value>
 			</setting>
 			<setting name="UpdatePath" xdt:Locator="Match(name)">
 				<value xdt:Transform="Replace">goteborg</value>
